Fix: modifie le overflow en visible pour afficher les liens du menu

--- a/src/styles.css
+++ b/src/styles.css
@@ -2,3 +2,7 @@
 
 @import '~@angular/material/prebuilt-themes/indigo-pink.css';
 body { margin: 0; }
+
+.mat-drawer-container{
+ overflow: visible !important; /*-bug angular materiel ajoute visible pour avoir la vue sur le menu-*/
+}
